[package]
name = "sarzak"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v5", "serde"] }
# nut = { path = "../nut" }
nut = { git = "https://gitlab-runner:7kzem8nVeizSJQnLPWFY@git.uberfoo.com/sarzak/nut.git", branch = "develop" }
snafu = "0.7.4"
log = "0.4.17"
serde_json = "1.0.93"
fnv = "1.0.7"
chumsky = "0.9.2"
ariadne = "0.2.0"
bincode = "1.3.3"
ansi_term = "0.12.1"
clap = { version = "4.0.32", features = ["derive"] }
heck = "0.4.1"

[lib]
doctest = true

[dev-dependencies]
env_logger = "0.10.0"

[features]
default = []
