[package]
name = "sarzak"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
async-std = "1.12.0"
bincode = "1.3.3"
cfg-if = "1.0.0"
clap = { version = "4.0.32", features = ["derive"] }
fnv = "1.0.7"
futures = "0.3.28"
heck = "0.4.1"
log = "0.4.17"
# no_deadlocks = "1.3.0"
no_deadlocks = { path = "../../github/no-deadlocks" }
# nut = { path = "../nut" }
nut = { git = "https://gitlab-runner:7kzem8nVeizSJQnLPWFY@git.uberfoo.com/sarzak/nut.git", branch = "develop" }
parking_lot = { version = "0.12.1", features = [
    "serde",
    "hardware-lock-elision",
    "deadlock_detection",
] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
snafu = "0.7.4"
serde_json = "1.0.93"
tracy-client = "0.15.2"
uuid = { version = "1.2.2", features = ["v5", "serde"] }

[lib]
doctest = true

[dev-dependencies]
env_logger = "0.10.0"

[features]
default = ["lu-dog-rc"]
lu-dog-async = []
lu-dog-rc = []
lu-dog-rwlock = []
lu-dog-pl-mutex = []
lu-dog-vanilla = []
lu-dog-no-deadlocks = []
