[package]
name = "sarzak"
version = "2.13.11"
edition = "2021"
authors = ["Keith T. Star <uberfoo@me.com>"]
categories = ["compilers", "memory-management"]
description = ""
documentation = "https://uberfoo.github.io/assets/docs/dwarf/introduction.html"
homepage = "https://uberfoo.github.io/assets/docs/dwarf/introduction.html"
include = [
    "build.rs",
    "src/**/*.rs",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]
keywords = ["dwarf", "sarzak", "arena"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/uberfoo/sarzak"

[dependencies]
ansi_term = "0.12.1"
async-std = { version = "1.12.0", optional = true }
bincode = "1.3.3"
cfg-if = "1.0.0"
clap = { version = "4.0.32", features = ["derive"] }
futures = { version = "0.3.28", optional = true }
heck = "0.4.1"
log = "0.4.18"
no_deadlocks = { git = "https://github.com/uberFoo/no-deadlocks", optional = true }
nut = { git = "https://github.com/uberFoo/nut" }
parking_lot = { version = "0.12.1", features = [
    "serde",
    "hardware-lock-elision",
    # "deadlock_detection",
], optional = true }
rustc-hash = "1.1.0"
serde = { version = "1.0.152", features = ["derive"] }
snafu = "0.7.4"
serde_json = "1.0.93"
tracy-client = { version = "0.15.2", optional = true }
uuid = { version = "1.2.2", features = ["v5", "serde"] }

[lib]
doctest = true
crate-type = ["lib", "staticlib"]

[dev-dependencies]
env_logger = "0.10.0"
pretty_env_logger = "0.5.0"

[features]
default = ["lu-dog-vec", "sarzak-rwlock"]
lu-dog-vec = []
lu-dog-vec-tracy = ["dep:tracy-client"]
lu-dog-rwlock-vec = []
lu-dog-ndrwlock-vec = ["dep:no_deadlocks"]
lu-dog-pl-vec = ["dep:parking_lot"]
lu-dog-rc = []
lu-dog-rwlock = []
lu-dog-async-vec = ["dep:futures", "dep:async-std"]
sarzak-single = []
sarzak-rwlock = []
woog-single = []
woog-rwLock = []
